// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > DropdownMenu customizedVue demo works fine 1`] = `
<div
  class="t-dropdown-menu"
  data-v-52bd570d=""
>
  
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      三列多选
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  
  
  <!---->
  
</div>
`;

exports[`DropdownMenu > DropdownMenu directionVue demo works fine 1`] = `
<div
  class="t-dropdown-menu"
>
  
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      全部产品
    </div>
    <svg
      class="t-icon t-icon-caret-up-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 7.5l7 7H5l7-7z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      默认排序
    </div>
    <svg
      class="t-icon t-icon-caret-up-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 7.5l7 7H5l7-7z"
        fill="currentColor"
      />
    </svg>
  </div>
  
  
  <!---->
  <!---->
  
</div>
`;

exports[`DropdownMenu > DropdownMenu disabledVue demo works fine 1`] = `
<div
  class="t-dropdown-menu"
>
  
  <div
    class="t-dropdown-menu__item t-dropdown-menu__item--disabled"
  >
    <div
      class="t-dropdown-menu__title"
    >
      禁用菜单
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-dropdown-menu__item t-dropdown-menu__item--disabled"
  >
    <div
      class="t-dropdown-menu__title"
    >
      禁用菜单
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  
  
  <!---->
  <!---->
  
</div>
`;

exports[`DropdownMenu > DropdownMenu mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-282366a4=""
>
  <h1
    class="title"
    data-v-282366a4=""
  >
    DropdownMenu 下拉菜单
  </h1>
  <p
    class="summary"
    data-v-282366a4=""
  >
    菜单呈现数个并列的选项类目，用于整个页面的内容筛选，由菜单面板和菜单选项组成。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-282366a4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选下拉菜单
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-dropdown-menu"
        data-v-282366a4=""
      >
        
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            全部产品
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            默认排序
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        
        <!---->
        <!---->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-282366a4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        分栏下拉菜单
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-dropdown-menu"
        data-v-282366a4=""
      >
        
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            单列多选
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            双列多选
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            三列多选
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        
        <!---->
        <!---->
        <!---->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-282366a4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        向上展开
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-dropdown-menu"
        data-v-282366a4=""
      >
        
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            全部产品
          </div>
          <svg
            class="t-icon t-icon-caret-up-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 7.5l7 7H5l7-7z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            默认排序
          </div>
          <svg
            class="t-icon t-icon-caret-up-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 7.5l7 7H5l7-7z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        
        <!---->
        <!---->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-282366a4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-dropdown-menu"
        data-v-282366a4=""
      >
        
        <div
          class="t-dropdown-menu__item t-dropdown-menu__item--disabled"
        >
          <div
            class="t-dropdown-menu__title"
          >
            禁用菜单
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-dropdown-menu__item t-dropdown-menu__item--disabled"
        >
          <div
            class="t-dropdown-menu__title"
          >
            禁用菜单
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        
        <!---->
        <!---->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-282366a4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        插槽样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-dropdown-menu"
        data-v-282366a4=""
        data-v-52bd570d=""
      >
        
        <div
          class="t-dropdown-menu__item"
        >
          <div
            class="t-dropdown-menu__title"
          >
            三列多选
          </div>
          <svg
            class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 16.5l7-7H5l7 7z"
              fill="currentColor"
            />
          </svg>
        </div>
        
        
        <!---->
        
      </div>
      
    </div>
  </div>
  <div
    data-v-282366a4=""
    style="height: 40px;"
  />
</div>
`;

exports[`DropdownMenu > DropdownMenu multipleVue demo works fine 1`] = `
<div
  class="t-dropdown-menu"
>
  
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      单列多选
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      双列多选
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      三列多选
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  
  
  <!---->
  <!---->
  <!---->
  
</div>
`;

exports[`DropdownMenu > DropdownMenu singleVue demo works fine 1`] = `
<div
  class="t-dropdown-menu"
>
  
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      全部产品
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-dropdown-menu__item"
  >
    <div
      class="t-dropdown-menu__title"
    >
      默认排序
    </div>
    <svg
      class="t-icon t-icon-caret-down-small t-dropdown-menu__icon"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 16.5l7-7H5l7 7z"
        fill="currentColor"
      />
    </svg>
  </div>
  
  
  <!---->
  <!---->
  
</div>
`;
